--- a/README.adoc
+++ b/README.adoc
@@ -122,7 +122,13 @@ image::success2.png["Ca run!", width=80%]
 == Améliorations
 
 . Reprenez un de vos exercices précédents et mettez les sources dans `src/java`.
-. Ajustez éventuellement le `pom.xml` pour que les étapes précédentes produisent les résultats escomptés. Pensez à vérifier que votre fichier .jar est exécutable. Que devez-vous corriger dans votre pom.xml ? Quelle est la commande pour le lancer ?
+. Ajustez éventuellement le `pom.xml` pour que les étapes précédentes produisent les résultats escomptés. Pensez à vérifier que votre fichier .jar est exécutable. Que devez-vous corriger dans votre pom.xml ? 
+J'ai changé le nom de la classe que je veux packager dans pom.xml entourée par les balises <mainclass>
+Quelle est la commande pour le lancer ?
+toujours la meme commande : 
+....
+java -jar target/tp_qualite-1.0.jar
+....
 . Ajoutez les commentaires vus en dev.
 . Cherchez dans la documentation {maven} les commandes permettant de générer une documentation javadoc, et les adaptions à faire sur votre projet (et éventuellement `pom.xml`) afin que {maven} génère la documentation automatiquement pour vous.
 . Documentez votre projet: remplacez le contenu de ce fichier README.doc par les instructions de compilation, de documentation et de lancement de votre projet. 
